--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
+                <configuration>
+                    <failIfNoTests></failIfNoTests>
+                </configuration>
             </plugin>
 
             <plugin>
